--- a/kanban-frondend/src/app/costum-styles/default-theme.scss
+++ b/kanban-frondend/src/app/costum-styles/default-theme.scss
@@ -23,3 +23,7 @@ $background: hsl(0, 0%, 89%);
 $text: hsl(240, 0%, 10%);
 $link: hsl(355, 100%, 58%);
 $accent: hsl(232, 72%, 21%);
+
+$urgent: hsl(355, 100%, 58%);
+$medium: hsl(32, 89%, 55%);
+$low: hsl(103, 43%, 43%);
