--- a/kanban-frondend/src/app/components/board/board.component.scss
+++ b/kanban-frondend/src/app/components/board/board.component.scss
@@ -108,7 +108,8 @@ mat-icon{
     left:0;
     background-color: $background;
     min-width: 100vw;
-    min-height: calc(100vh - 120px);
+    height: calc(100vh - 120px);
+    max-height: calc(100vh - 120px);
     margin: 0;
     padding: 0;
 }
@@ -122,12 +123,10 @@ mat-icon{
 
     position: relative;
     overflow: auto;
-
-    width: 100vw;
-    padding-bottom: 64px;
 }
 
 .board-card-wrapper{
+    height: 100%;
     max-height: 960px;
     width: 400px;
     margin-top: 32px;
@@ -136,9 +135,17 @@ mat-icon{
 
 .board-col-overflow{
     overflow-y: auto;
-    height: inherit;
     max-height: inherit;
     padding:8px;
+    height: 700px;
+}
+
+.board-media-row{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap:24px;
 }
 
 .board-card-wrapper-empty{
@@ -150,25 +157,22 @@ mat-icon{
 
     height:500px;
     max-height: 600px;
-  
-    padding-top: 16px;
-    margin-top: 24px;
 
     transition: all 550ms;
 }
 
-.board-card{
+.board-card {
     background-color: $secondary;
     color: $text;
     border-radius: 20px;
-
+    width: 380px;
     height: fit-content;
     padding: 8px 8px 16px 8px;
-
-    margin-top: 24px;
+    transition: all 550ms;
 }
 
 .board-heading{
+    margin-bottom: 16px;
     color:$text;
     transition: all 550ms;
     & mat-icon{
@@ -179,6 +183,38 @@ mat-icon{
             margin-left:24px;
         }
     }
+}
+
+.board-card-subtitle{
+    color: $text;
+    font-style: italic;
+}
+
+.pos-abs{
+    position: absolute;
+    bottom:18px;
+    left: 16px;
+}
+
+.urgent{
+    background-color: $urgent;
+    border-radius: 10px;
+    width: 20px;
+    height: 3px;
+}
+
+.medium{
+    background-color: $medium;
+    border-radius: 10px;
+    width: 20px;
+    height: 3px;
+}
+
+.low{
+    background-color: $low;
+    border-radius: 10px;
+    width: 20px;
+    height: 3px;
 }
 
 .board-col-headline{
@@ -205,6 +241,7 @@ mat-icon{
             border-radius: 100%;
             transform: scale(1.1);
             padding: 4px;
+            cursor: pointer !important;
         }
     }
 }
@@ -227,6 +264,10 @@ mat-icon{
     .board-wrapper-col {
         flex-direction: column;
         align-items: center;
+        height: fit-content;
+        padding-bottom: 64px;
+    }
+    .board-col-overflow{
         height: fit-content;
     }
     .board-card-wrapper-empty{
