--- a/kanban-frondend/src/app/costum-styles/dark-theme.scss
+++ b/kanban-frondend/src/app/costum-styles/dark-theme.scss
@@ -64,6 +64,7 @@ $accent-dark: hsl(192, 83%, 26%);
 }
 
 .board-heading-dark{
+    margin-bottom: 16px;
     color:$text-dark;
     transition: all 550ms;
     & mat-icon{
@@ -76,16 +77,21 @@ $accent-dark: hsl(192, 83%, 26%);
     }
 }
 
+.board-card-subtitle-dark{
+    color: $text-dark;
+    font-style: italic;
+}
+
 .board-card-dark{
     background-color: $secondary-dark;
     color: $text-dark;
     border:solid 3px $accent-dark;
     border-radius: 20px;
+    width: 380px;
 
     height: fit-content;
     padding: 8px 8px 16px 8px;
 
-    margin-top: 24px;
     transition: all 550ms;
 }
 
@@ -99,9 +105,6 @@ $accent-dark: hsl(192, 83%, 26%);
 
     height:500px;
     max-height: 600px;
-  
-    padding-top: 16px;
-    margin-top: 24px;
 
     transition: all 550ms;
 }
@@ -112,8 +115,8 @@ $accent-dark: hsl(192, 83%, 26%);
     left:0;
     background-color: $primary-dark;
     min-width: 100vw;
-    min-height: calc(100vh - 120px);
+    height: calc(100vh - 120px);
+    max-height: calc(100vh - 120px);
     margin: 0;
     padding: 0;
-    transition: all 550ms;
 }
