--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -50,17 +50,25 @@
                             class="1003" cdkDropList #urgentList="cdkDropList" [cdkDropListData]="urgent"
                             [cdkDropListConnectedTo]="[todoList, inProgressList, doneList]"
                             (cdkDropListDropped)="drop($event)">
-                            <div class="flex-c-c" *ngIf="urgent.length === 0">
+                            <div class="flex-c-c add" *ngIf="urgent.length === 0">
                                 <mat-icon class="mr-t-16 board-col-icons">add</mat-icon>
                                 <div class="mr-t-16">Add Task</div>
                             </div>
                             <div class="board-media-row">
                                 <div *ngFor="let item of urgent" cdkDrag>
-                                    <mat-card [attr.id]="'CardId-' + item.id" class="1002 board-card" cdkDragPreview>
+                                    <mat-card [ngClass]="{
+                                        'board-card': currentTheme === 'default',
+                                        'board-card-light': currentTheme === 'light-theme',
+                                        'board-card-dark': currentTheme === 'dark-theme'}"
+                                        [attr.id]="'CardId-' + item.id" class=" board-card" cdkDragPreview>
                                         <mat-card-header>
                                             <div class="flex-col">
                                                 <mat-card-title>{{item.title}}</mat-card-title>
-                                                <mat-card-subtitle class="board-card-subtitle 1004">{{item.subtitle}}</mat-card-subtitle>
+                                                <mat-card-subtitle  [ngClass]="{
+                                                    'board-card-subtitle': currentTheme === 'default',
+                                                    'board-card-subtitle-light': currentTheme === 'light-theme',
+                                                    'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
+                                                    class="board-card-subtitle ">{{item.subtitle}}</mat-card-subtitle>
                                                 <div [ngClass]="getPriorityClass(item.prio)"></div>
                                             </div>
                                         </mat-card-header>
@@ -102,11 +110,19 @@
                             </div>
                             <div class="board-media-row">
                                 <div *ngFor="let item of todo" cdkDrag>
-                                    <mat-card [attr.id]="'CardId-' + item.id" class="1002 board-card" cdkDragPreview>
+                                    <mat-card [ngClass]="{
+                                        'board-card': currentTheme === 'default',
+                                        'board-card-light': currentTheme === 'light-theme',
+                                        'board-card-dark': currentTheme === 'dark-theme'}"
+                                        [attr.id]="'CardId-' + item.id" class=" board-card" cdkDragPreview>
                                         <mat-card-header>
                                             <div class="flex-col">
                                                 <mat-card-title>{{item.title}}</mat-card-title>
-                                                <mat-card-subtitle class="board-card-subtitle 1004">{{item.subtitle}}</mat-card-subtitle>
+                                                <mat-card-subtitle  [ngClass]="{
+                                                    'board-card-subtitle': currentTheme === 'default',
+                                                    'board-card-subtitle-light': currentTheme === 'light-theme',
+                                                    'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
+                                                    class="board-card-subtitle ">{{item.subtitle}}</mat-card-subtitle>
                                                 <div [ngClass]="getPriorityClass(item.prio)"></div>
                                             </div>
                                         </mat-card-header>
@@ -148,11 +164,19 @@
                             </div>
                             <div class="board-media-row">
                                 <div *ngFor="let item of inProgress" cdkDrag>
-                                    <mat-card [attr.id]="'CardId-' + item.id" class="1002 board-card" cdkDragPreview>
+                                    <mat-card [ngClass]="{
+                                        'board-card': currentTheme === 'default',
+                                        'board-card-light': currentTheme === 'light-theme',
+                                        'board-card-dark': currentTheme === 'dark-theme'}"
+                                        [attr.id]="'CardId-' + item.id" class=" board-card" cdkDragPreview>
                                         <mat-card-header>
                                             <div class="flex-col">
                                                 <mat-card-title>{{item.title}}</mat-card-title>
-                                                <mat-card-subtitle class="board-card-subtitle 1004">{{item.subtitle}}</mat-card-subtitle>
+                                                <mat-card-subtitle  [ngClass]="{
+                                                    'board-card-subtitle': currentTheme === 'default',
+                                                    'board-card-subtitle-light': currentTheme === 'light-theme',
+                                                    'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
+                                                    class="board-card-subtitle ">{{item.subtitle}}</mat-card-subtitle>
                                                 <div [ngClass]="getPriorityClass(item.prio)"></div>
                                             </div>
                                         </mat-card-header>
@@ -194,11 +218,20 @@
                             </div>
                             <div class="board-media-row">
                                 <div *ngFor="let item of done" cdkDrag>
-                                    <mat-card [attr.id]="'CardId-' + item.id" class="1002 board-card" cdkDragPreview>
+                                    <mat-card [ngClass]="{
+                                        'board-card': currentTheme === 'default',
+                                        'board-card-light': currentTheme === 'light-theme',
+                                        'board-card-dark': currentTheme === 'dark-theme'}"
+                                        [attr.id]="'CardId-' + item.id" class=" board-card" cdkDragPreview>
                                         <mat-card-header>
                                             <div class="flex-col">
                                                 <mat-card-title>{{item.title}}</mat-card-title>
-                                                <mat-card-subtitle class="board-card-subtitle 1004">{{item.subtitle}}</mat-card-subtitle>
+                                                <mat-card-subtitle [ngClass]="{
+                                                    'board-card-subtitle': currentTheme === 'default',
+                                                    'board-card-subtitle-light': currentTheme === 'light-theme',
+                                                    'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
+                                                    [attr.id]="'CardId-' + item.id" class=" board-card" 
+                                                    class="board-card-subtitle ">{{item.subtitle}}</mat-card-subtitle>
                                                 <div [ngClass]="getPriorityClass(item.prio)"></div>
                                             </div>
                                         </mat-card-header>
