theming successful implemented, localStorage works also

--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
 
         <mat-form-field>
             <mat-label>Select theme</mat-label>
-            <mat-select (selectionChange)="onThemeChange($event.value, undefined)">
+            <mat-select (selectionChange)="onThemeChange($event.value)">
                 <mat-option value="default-theme">Default</mat-option>
                 <mat-option value="light-theme">Light</mat-option>
                 <mat-option value="dark-theme">Dark</mat-option>
