--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -1,6 +1,9 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
     <!-- SIDENAV START -->
-    <mat-drawer id="sideNav" #drawer class="board-sidenav" mode="over" [opened]="false">
+    <mat-drawer id="sideNav" #drawer [ngClass]="{
+        'board-sidenav': currentTheme === 'default',
+        'board-sidenav-light': currentTheme === 'light-theme',
+        'board-sidenav-dark': currentTheme === 'dark-theme'}" class="board-sidenav" mode="over" [opened]="false">
         <div class="logo-container">B² TICKETEER</div>
         <ul class="menu-items">
             <li [routerLink]="['/']"><mat-icon>dashboard</mat-icon>Board</li>
@@ -18,7 +21,10 @@
 
     <!-- HEADER START -->
     <div>
-        <mat-toolbar id="navToolbar" class="board-toolbar">
+        <mat-toolbar id="navToolbar" [ngClass]="{
+            'board-toolbar': currentTheme === 'default',
+            'board-toolbar-light': currentTheme === 'light-theme',
+            'board-toolbar-dark': currentTheme === 'dark-theme'}" class="board-toolbar">
             <mat-toolbar-row>
                 <div class="flex-c-c">
                     <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
@@ -31,12 +37,26 @@
     <!-- HEADER END -->
 
     <!-- BOARD CONTENT START -->
-    <div id="mainBoardBG" class="board-bg">
-        <div id="boardBG" class="board-wrapper">
+    <div id="mainBoardBG" [ngClass]="{
+        'board-bg': currentTheme === 'default',
+        'board-bg-light': currentTheme === 'light-theme',
+        'board-bg-dark': currentTheme === 'dark-theme'}" class="board-bg">
+
+        <!-- BOARD CONTENT INNER START -->
+        <div id="boardBG" [ngClass]="{
+            'board-wrapper': currentTheme === 'default',
+            'board-wrapper-light': currentTheme === 'light-theme',
+            'board-wrapper-dark': currentTheme === 'dark-theme'}" class="board-wrapper">
+
+            <!-- BOARD COLUMNS START -->
             <div class="board-wrapper-col">
                 <!-- URGENT START-->
                 <div class="board-card-wrapper">
-                    <div class="flex-btw-c board-heading 1001">
+                    <div [ngClass]="{
+                        'board-heading': currentTheme === 'default',
+                        'board-heading-light': currentTheme === 'light-theme',
+                        'board-heading-dark': currentTheme === 'dark-theme'}"
+                        class="flex-btw-c board-heading">
                         <div class="board-col-headline pad-l-24">Urgent</div>
                         <div class="pad-r-24">
                             <mat-icon>add</mat-icon><mat-icon>more_horiz</mat-icon>
@@ -46,7 +66,7 @@
                         <div [ngClass]="{
                                 'board-card-wrapper-empty': urgent.length === 0 && currentTheme === 'default',
                                 'board-card-wrapper-empty-light': urgent.length === 0 && currentTheme === 'light-theme',
-                                'board-card-wrapper-empty-dark': urgent.length === 0 && currentTheme === 'dark-theme'}" 
+                                'board-card-wrapper-empty-dark': urgent.length === 0 && currentTheme === 'dark-theme'}"
                             class="1003" cdkDropList #urgentList="cdkDropList" [cdkDropListData]="urgent"
                             [cdkDropListConnectedTo]="[todoList, inProgressList, doneList]"
                             (cdkDropListDropped)="drop($event)">
@@ -64,7 +84,7 @@
                                         <mat-card-header>
                                             <div class="flex-col">
                                                 <mat-card-title>{{item.title}}</mat-card-title>
-                                                <mat-card-subtitle  [ngClass]="{
+                                                <mat-card-subtitle [ngClass]="{
                                                     'board-card-subtitle': currentTheme === 'default',
                                                     'board-card-subtitle-light': currentTheme === 'light-theme',
                                                     'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
@@ -90,7 +110,11 @@
 
                 <!-- TO DO START-->
                 <div class="board-card-wrapper">
-                    <div class="flex-btw-c board-heading 1001">
+                    <div [ngClass]="{
+                        'board-heading': currentTheme === 'default',
+                        'board-heading-light': currentTheme === 'light-theme',
+                        'board-heading-dark': currentTheme === 'dark-theme'}"
+                        class="flex-btw-c board-heading">
                         <div class="board-col-headline pad-l-24">To do</div>
                         <div class="pad-r-24">
                             <mat-icon>add</mat-icon><mat-icon>more_horiz</mat-icon>
@@ -100,7 +124,7 @@
                         <div [ngClass]="{
                                 'board-card-wrapper-empty': todo.length === 0 && currentTheme === 'default',
                                 'board-card-wrapper-empty-light': todo.length === 0 && currentTheme === 'light-theme',
-                                'board-card-wrapper-empty-dark': todo.length === 0 && currentTheme === 'dark-theme'}" 
+                                'board-card-wrapper-empty-dark': todo.length === 0 && currentTheme === 'dark-theme'}"
                             class="1003" cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo"
                             [cdkDropListConnectedTo]="[urgentList, inProgressList, doneList]"
                             (cdkDropListDropped)="drop($event)">
@@ -118,7 +142,7 @@
                                         <mat-card-header>
                                             <div class="flex-col">
                                                 <mat-card-title>{{item.title}}</mat-card-title>
-                                                <mat-card-subtitle  [ngClass]="{
+                                                <mat-card-subtitle [ngClass]="{
                                                     'board-card-subtitle': currentTheme === 'default',
                                                     'board-card-subtitle-light': currentTheme === 'light-theme',
                                                     'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
@@ -144,7 +168,11 @@
 
                 <!-- IN PROGRESS START-->
                 <div class="board-card-wrapper">
-                    <div class="flex-btw-c board-heading 1001">
+                    <div [ngClass]="{
+                        'board-heading': currentTheme === 'default',
+                        'board-heading-light': currentTheme === 'light-theme',
+                        'board-heading-dark': currentTheme === 'dark-theme'}"
+                        class="flex-btw-c board-heading">
                         <div class="board-col-headline pad-l-24">In progress</div>
                         <div class="pad-r-24">
                             <mat-icon>add</mat-icon><mat-icon>more_horiz</mat-icon>
@@ -172,7 +200,7 @@
                                         <mat-card-header>
                                             <div class="flex-col">
                                                 <mat-card-title>{{item.title}}</mat-card-title>
-                                                <mat-card-subtitle  [ngClass]="{
+                                                <mat-card-subtitle [ngClass]="{
                                                     'board-card-subtitle': currentTheme === 'default',
                                                     'board-card-subtitle-light': currentTheme === 'light-theme',
                                                     'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
@@ -198,7 +226,11 @@
 
                 <!-- DONE START-->
                 <div class="board-card-wrapper">
-                    <div class="flex-btw-c board-heading 1001">
+                    <div [ngClass]="{
+                        'board-heading': currentTheme === 'default',
+                        'board-heading-light': currentTheme === 'light-theme',
+                        'board-heading-dark': currentTheme === 'dark-theme'}"
+                        class="flex-btw-c board-heading">
                         <div class="board-col-headline pad-l-24">Done</div>
                         <div class="pad-r-24">
                             <mat-icon>add</mat-icon><mat-icon>more_horiz</mat-icon>
@@ -208,7 +240,7 @@
                         <div [ngClass]="{
                                 'board-card-wrapper-empty': done.length === 0 && currentTheme === 'default',
                                 'board-card-wrapper-empty-light': done.length === 0 && currentTheme === 'light-theme',
-                                'board-card-wrapper-empty-dark': done.length === 0 && currentTheme === 'dark-theme'}" 
+                                'board-card-wrapper-empty-dark': done.length === 0 && currentTheme === 'dark-theme'}"
                             class="1003" cdkDropList #doneList="cdkDropList" [cdkDropListData]="done"
                             [cdkDropListConnectedTo]="[urgentList, todoList, inProgressList]"
                             (cdkDropListDropped)="drop($event)">
@@ -230,7 +262,7 @@
                                                     'board-card-subtitle': currentTheme === 'default',
                                                     'board-card-subtitle-light': currentTheme === 'light-theme',
                                                     'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
-                                                    [attr.id]="'CardId-' + item.id" class=" board-card" 
+                                                    [attr.id]="'CardId-' + item.id" class=" board-card"
                                                     class="board-card-subtitle ">{{item.subtitle}}</mat-card-subtitle>
                                                 <div [ngClass]="getPriorityClass(item.prio)"></div>
                                             </div>
@@ -246,10 +278,10 @@
                                     </mat-card>
                                 </div>
                             </div>
-                          </div>
                         </div>
-                  </div><!-- DONE END-->
-              </div>
-          </div>
-      </div><!-- BOARD CONTENT START -->
-  </mat-drawer-container>
+                    </div>
+                </div><!-- DONE END-->
+            </div><!-- BOARD COLUMNS END -->
+        </div><!-- BOARD CONTENT INNER END -->
+    </div><!-- BOARD CONTENT END -->
+</mat-drawer-container>
