add new btn to login component

--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -20,5 +20,10 @@
                 <mat-option value="dark-theme">Dark</mat-option>
             </mat-select>
         </mat-form-field>
+
+        <div class="flex-c-c gap-32" id="loginBtnContainer">
+            <button mat-raised-button class="login-btn"><mat-icon>how_to_reg</mat-icon>Register</button>
+            <button mat-raised-button class="login-btn"><mat-icon>login</mat-icon>Login</button>
+        </div>
     </div>
 </section>
