--- a/kanban-frondend/src/styles.scss
+++ b/kanban-frondend/src/styles.scss
@@ -68,6 +68,9 @@ mat-drawer-content{ overflow-x: hidden !important}
     flex-direction: column;
 }
 
+.gap-32{
+    gap:32px;
+}
 
 /*
 ### COSTUM CHANGES
