--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -21,9 +21,10 @@
             </mat-select>
         </mat-form-field>
 
-        <div class="flex-c-c gap-32" id="loginBtnContainer">
-            <button mat-raised-button class="login-btn"><mat-icon>how_to_reg</mat-icon>Register</button>
-            <button mat-raised-button class="login-btn"><mat-icon>login</mat-icon>Login</button>
+        <div class="flex-c-c gap-32 login-btn">
+            <button mat-raised-button><mat-icon>how_to_reg</mat-icon>Register</button>
+            <app-snackbars></app-snackbars>
         </div>
+
     </div>
 </section>
