--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -21,8 +21,8 @@
             </mat-select>
         </mat-form-field>
 
-        <div class="flex-c-c gap-32 login-btn">
-            <button mat-raised-button><mat-icon>how_to_reg</mat-icon>Register</button>
+        <div class="flex-c-c gap-32">
+            <button class="login-btn" mat-raised-button><mat-icon>how_to_reg</mat-icon>Register</button>
             <app-snackbars></app-snackbars>
         </div>
 
