--- a/kanban-frondend/src/app/components/board/board.component.scss
+++ b/kanban-frondend/src/app/components/board/board.component.scss
@@ -33,6 +33,39 @@ mat-icon{
     color:$secondary;
 }
 
+.board-overlay{
+    background-color: $primary;
+    color: $background;
+
+    font-size: 50px;
+
+    min-height: 100%;
+    min-width: 100%;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: all 1s;
+
+    overflow: hidden !important;
+}
+
+.slide-out {
+    overflow: hidden !important;
+    transform: translateX(100%);
+    opacity: 0;
+}
+
+  .board-overlay-hide {
+    animation: slideOutRight 2s forwards;
+  }
+
 .board-bg{
     background-color: $secondary;
     transition: all 550ms;
