--- a/kanban-frondend/src/app/components/snack-msg/snack-msg.component.html
+++ b/kanban-frondend/src/app/components/snack-msg/snack-msg.component.html
@@ -1,1 +1,4 @@
-<p class="flex-c-c">{{ data.message }}<mat-icon class="snack-msg">sentiment_very_satisfied</mat-icon></p>
+<p class="flex-c-c">{{ data.message }}
+    <mat-icon class="snack-msg">sentiment_very_satisfied</mat-icon>
+    <mat-spinner strokeWidth="3" [diameter]="30" class="login-spinner"></mat-spinner>
+</p>
