--- a/kanban-frondend/src/app/components/snack-msg/snack-msg.component.scss
+++ b/kanban-frondend/src/app/components/snack-msg/snack-msg.component.scss
@@ -22,4 +22,12 @@
 
 .snack-msg{
     margin-left:64px;
+    margin-right: 32px;
+}
+
+/* Spinner styles */
+.login-spinner::ng-deep circle{
+    stroke: #FFFFFF !important;
+    width: 50px;
+    height: auto;
 }
